--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -20,7 +20,7 @@
        var: vpcout
 
     - name: create Public Subnet 1 in Zone 1
-      ec2_vpc_net:
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{ region }}"
         az: "{{ zone1 }}"
