--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -15,6 +15,8 @@
         name: vprofile-key
         region: "{{region}}"
       register: key_out
+    - debug:
+       var: key_out      
 
     - name: Save private key into file bastion-key.pem
       copy:
