--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -20,7 +20,7 @@
 
     - name: Save private key into file bastion-key.pem
       copy:
-        content: "{{key_out.private_key}}"
+        content: "{{key_out.key.private_key}}"
         dest: "./bastion-key.pem"
         mode: 0600
       when: key_out.changed
