--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -39,7 +39,7 @@
       register: BastionSG_out
 
     - name: Creating Bastion Host
-      ec2:
+      amazon.aws.ec2_instance:
         key_name: vprofile-key
         region: "{{region}}"
         instance_type: t2.micro
