--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -152,7 +152,7 @@
       register: db01_out
 
     - debug:
-        var: db01_out
+        var: db01_out.instances[0].instance_id
 
     - local_action:
         module: ec2_elb_lb
