--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -169,8 +169,8 @@
           - "{{ pubsub3id }}"
         listeners:
           - protocol: http #options are http, https, ssl, tcp
-          - load_balancer_port: 80
-          - instance_port: 80
+            load_balancer_port: 80
+            instance_port: 80
 
     - name: Insert/Update Hosts IP & Name in file provision-stack/group_vars/hostsip
       blockinfile:
